# OCVCascadeSampleGenerator

./: CMakeLists.txt  README.md  crop.sh
src/: main.cpp
